# Chapter7

./: COPYRIGHT  Dockerfile  Dockerfile.Ubuntu18.04  Dockerfile.Ubuntu20.04  Dockerfile.debian  Dockerfile.vnc  IntelBasekitPackageList  IntelHPCkitPackageList  License.txt  Makefile  README.autovirtualbox  README.docker  README.md  README.virtualbox  Setup.Ubuntu18.04  Setup.Ubuntu20.04  autovirtualbox.sh  docker_build.sh  docker_run.sh  dockerbash.sh  dockerit.sh  dockertest.sh  dockervnc.sh
FunctionLevel/: CMakeLists.txt  FunctionLevel.c  FunctionLevelFort.F90
GlobalSums/: CMakeLists.txt  globalsums.c  kahan_sum.c  serial_sum.c  serial_sum_novec.c
HelloOpenMP/: CMakeLists.txt  HelloOpenMP.c  HelloOpenMP_fix1.c  HelloOpenMP_fix2.c  HelloOpenMP_fix3.c  HelloOpenMP_fix4.c  HelloOpenMP_fix5.c  Makefile.simple
HighLevelOpenMP_stencil/: CMakeLists.txt  batch.sh  malloc2D.c  results.txt  stencil_opt2.c  stencil_opt3.c  stencil_opt4.c  stencil_opt5.c  stencil_opt6.c  timer.c  timer.h
HybridOpenMP_stencil/: CMakeLists.txt  Intel_results.txt  batch.sh  malloc2D.h  results.txt  stencil.c  stencil_hybrid.c  stencil_threads.c
PairwiseSumByTask/: CMakeLists.txt  PairwiseSumByTask.c  globalsums.c  timer.h
PrefixScan/: CMakeLists.txt  PrefixScan.c  PrefixScan.c.debug  run.sh
Private/: CMakeLists.txt  private.c
SplitStencil/: CMakeLists.txt  SplitStencil.c  SplitStencil_opt1.c  run.sh  timer.c
Stencil/: CMakeLists.txt  malloc2D.c  malloc2D.h  run.sh  stencil.c  stencil_opt1.c  stencil_opt2.c
StreamTriad/: CMakeLists.txt  run.sh  stream_triad.c  stream_triad_opt1.c  stream_triad_opt2.c  stream_triad_opt3.c  stream_triad_opt4.c  timer.h
VecAdd/: CMakeLists.txt  run.sh  vecadd.c  vecadd_opt1.c  vecadd_opt2.c  vecadd_opt3.c
stencil/: CMakeLists.txt  batch.sh  results.txt  stencil.c  stencil_opt1.c  stencil_opt2.c
stencil/cmake/Modules/: Findlikwid.cmake
